crates/au-cli/tests/it/snapshots/it__scenarios__nested-record-tuple-and-brand.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 35,
                        "line_col": {
                          "end": {
                            "col": 36,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/nested-record-tuple-and-brand/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "nested-record-tuple-and-brand"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "nested-record-tuple-and-brand"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/nested-record-tuple-and-brand/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [
          {
            "kind": "heading",
            "level": 1,
            "span": {
              "end": 108,
              "line_col": {
                "end": {
                  "col": 1,
                  "line": 11
                },
                "start": {
                  "col": 1,
                  "line": 10
                }
              },
              "start": 99
            },
            "text": "Holder"
          }
        ],
        "claim": [
          "outer"
        ],
        "closure": [
          "outer"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "box",
            "origins": [
              {
                "name": "outer",
                "origin_path": "<root>/scenarios/nested-record-tuple-and-brand/type/outer.type.yaml",
                "required": true,
                "shape": "inner"
              }
            ],
            "required": true,
            "shape": "inner"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 94,
                        "line_col": {
                          "end": {
                            "col": 1,
                            "line": 8
                          },
                          "start": {
                            "col": 3,
                            "line": 4
                          }
                        },
                        "start": 23
                      },
                      "file": "<root>/scenarios/nested-record-tuple-and-brand/holder.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "fields": [
                        {
                          "field": "len",
                          "values": [
                            {
                              "brand": "meter",
                              "kind": "scalar",
                              "value": 5
                            }
                          ]
                        },
                        {
                          "field": "pt",
                          "values": [
                            {
                              "brand": "point",
                              "elements": [
                                {
                                  "value": {
                                    "kind": "scalar",
                                    "value": 1
                                  }
                                },
                                {
                                  "value": {
                                    "kind": "scalar",
                                    "value": 2
                                  }
                                }
                              ],
                              "kind": "tuple"
                            }
                          ]
                        },
                        {
                          "field": "region",
                          "values": [
                            {
                              "elements": [
                                {
                                  "value": {
                                    "kind": "scalar",
                                    "value": 0
                                  }
                                },
                                {
                                  "value": {
                                    "kind": "scalar",
                                    "value": 0
                                  }
                                },
                                {
                                  "value": {
                                    "kind": "scalar",
                                    "value": 10
                                  }
                                },
                                {
                                  "value": {
                                    "kind": "scalar",
                                    "value": 10
                                  }
                                }
                              ],
                              "kind": "tuple"
                            }
                          ]
                        }
                      ],
                      "kind": "inline_record"
                    }
                  }
                ],
                "value": {
                  "fields": [
                    {
                      "field": "len",
                      "values": [
                        {
                          "brand": "meter",
                          "kind": "scalar",
                          "value": 5
                        }
                      ]
                    },
                    {
                      "field": "pt",
                      "values": [
                        {
                          "brand": "point",
                          "elements": [
                            {
                              "value": {
                                "kind": "scalar",
                                "value": 1
                              }
                            },
                            {
                              "value": {
                                "kind": "scalar",
                                "value": 2
                              }
                            }
                          ],
                          "kind": "tuple"
                        }
                      ]
                    },
                    {
                      "field": "region",
                      "values": [
                        {
                          "elements": [
                            {
                              "value": {
                                "kind": "scalar",
                                "value": 0
                              }
                            },
                            {
                              "value": {
                                "kind": "scalar",
                                "value": 0
                              }
                            },
                            {
                              "value": {
                                "kind": "scalar",
                                "value": 10
                              }
                            },
                            {
                              "value": {
                                "kind": "scalar",
                                "value": 10
                              }
                            }
                          ],
                          "kind": "tuple"
                        }
                      ]
                    }
                  ],
                  "kind": "inline_record"
                }
              }
            ],
            "field": "box"
          }
        ],
        "file": "<root>/scenarios/nested-record-tuple-and-brand/holder.md",
        "section_presence": null
      }
    ]
  }
}
